--- a/01-redux-basic/package.json
+++ b/01-redux-basic/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "redux": "^4.0.5"
+  },
   "devDependencies": {
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
