--- a/03-todo-app/package.json
+++ b/03-todo-app/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~8.2.9",
     "@angular/router": "~8.2.9",
     "@ngrx/store": "^10.0.1",
+    "@ngrx/store-devtools": "^10.0.1",
     "rxjs": "~6.4.0",
     "todomvc-app-css": "^2.3.0",
     "tslib": "^1.10.0",
