--- a/04-ingresoEgreso-app/angular.json
+++ b/04-ingresoEgreso-app/angular.json
@@ -123,8 +123,13 @@
               "devServerTarget": "ingresoEgreso-app:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {}
         }
       }
-    }},
+    }
+  },
   "defaultProject": "ingresoEgreso-app"
 }
