--- a/04-ingresoEgreso-app/package.json
+++ b/04-ingresoEgreso-app/package.json
@@ -21,10 +21,11 @@
     "@angular/platform-browser-dynamic": "~8.2.9",
     "@angular/router": "~8.2.9",
     "bootstrap": "^4.5.3",
+    "firebase": ">= 5.5.7 <8",
     "rxjs": "~6.4.0",
+    "sweetalert2": "^10.9.1",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1",
-    "firebase": ">= 5.5.7 <8"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.8",
