--- a/04-ingresoEgreso-app/package.json
+++ b/04-ingresoEgreso-app/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~8.2.9",
     "@angular/platform-browser-dynamic": "~8.2.9",
     "@angular/router": "~8.2.9",
+    "@ngrx/store": "^10.0.1",
     "bootstrap": "^4.5.3",
     "firebase": ">= 5.5.7 <8",
     "rxjs": "~6.4.0",
