--- a/04-ingresoEgreso-app/firebase.json
+++ b/04-ingresoEgreso-app/firebase.json
@@ -1,19 +1,16 @@
 {
-  "hosting": [
-    {
-      "target": "ingresoEgreso-app",
-      "public": "dist/ingresoEgreso-app",
-      "ignore": [
-        "firebase.json",
-        "**/.*",
-        "**/node_modules/**"
-      ],
-      "rewrites": [
-        {
-          "source": "**",
-          "destination": "/index.html"
-        }
-      ]
-    }
-  ]
+  "hosting": {
+    "public": "dist",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
+  }
 }
